FAI-2855 - Update report controller to read data from blob storage
