# src/SFA.DAS.Recruit.Contracts/Generated/Responses.g.cs
@@ -195,76 +195,6 @@ namespace SFA.DAS.Recruit.Contracts.ApiResponses
     }
 
     [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "14.2.0.0 (NJsonSchema v11.1.0.0 (Newtonsoft.Json v13.0.0.0))")]
-    public partial class ApplicationReviewReport
-    {
-        [System.Text.Json.Serialization.JsonPropertyName("applicationId")]
-        [Newtonsoft.Json.JsonProperty("applicationId", Required = Newtonsoft.Json.Required.DisallowNull, NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore)]
-        public System.Guid ApplicationId { get; set; } = default!;
-
-        [System.Text.Json.Serialization.JsonPropertyName("candidateId")]
-        [Newtonsoft.Json.JsonProperty("candidateId", Required = Newtonsoft.Json.Required.DisallowNull, NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore)]
-        public System.Guid CandidateId { get; set; } = default!;
-
-        [System.Text.Json.Serialization.JsonPropertyName("vacancyReference")]
-        [Newtonsoft.Json.JsonProperty("vacancyReference", Required = Newtonsoft.Json.Required.DisallowNull, NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore)]
-        public long VacancyReference { get; set; } = default!;
-
-        [System.Text.Json.Serialization.JsonPropertyName("vacancyTitle")]
-        [System.Text.Json.Serialization.JsonIgnore(Condition = System.Text.Json.Serialization.JsonIgnoreCondition.WhenWritingNull)]
-        [Newtonsoft.Json.JsonProperty("vacancyTitle", Required = Newtonsoft.Json.Required.Default, NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore)]
-        public string? VacancyTitle { get; set; } = default!;
-
-        [System.Text.Json.Serialization.JsonPropertyName("employerName")]
-        [System.Text.Json.Serialization.JsonIgnore(Condition = System.Text.Json.Serialization.JsonIgnoreCondition.WhenWritingNull)]
-        [Newtonsoft.Json.JsonProperty("employerName", Required = Newtonsoft.Json.Required.Default, NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore)]
-        public string? EmployerName { get; set; } = default!;
-
-        [System.Text.Json.Serialization.JsonPropertyName("trainingProviderName")]
-        [System.Text.Json.Serialization.JsonIgnore(Condition = System.Text.Json.Serialization.JsonIgnoreCondition.WhenWritingNull)]
-        [Newtonsoft.Json.JsonProperty("trainingProviderName", Required = Newtonsoft.Json.Required.Default, NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore)]
-        public string? TrainingProviderName { get; set; } = default!;
-
-        [System.Text.Json.Serialization.JsonPropertyName("programmeId")]
-        [Newtonsoft.Json.JsonProperty("programmeId", Required = Newtonsoft.Json.Required.DisallowNull, NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore)]
-        public int ProgrammeId { get; set; } = default!;
-
-        [System.Text.Json.Serialization.JsonPropertyName("vacancyClosingDate")]
-        [System.Text.Json.Serialization.JsonIgnore(Condition = System.Text.Json.Serialization.JsonIgnoreCondition.WhenWritingNull)]
-        [Newtonsoft.Json.JsonProperty("vacancyClosingDate", Required = Newtonsoft.Json.Required.Default, NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore)]
-        public System.DateTime? VacancyClosingDate { get; set; } = default!;
-
-        [System.Text.Json.Serialization.JsonPropertyName("applicationSubmittedDate")]
-        [System.Text.Json.Serialization.JsonIgnore(Condition = System.Text.Json.Serialization.JsonIgnoreCondition.WhenWritingNull)]
-        [Newtonsoft.Json.JsonProperty("applicationSubmittedDate", Required = Newtonsoft.Json.Required.Default, NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore)]
-        public System.DateTime? ApplicationSubmittedDate { get; set; } = default!;
-
-        [System.Text.Json.Serialization.JsonPropertyName("availableWhere")]
-        [System.Text.Json.Serialization.JsonIgnore(Condition = System.Text.Json.Serialization.JsonIgnoreCondition.WhenWritingNull)]
-        [Newtonsoft.Json.JsonProperty("availableWhere", Required = Newtonsoft.Json.Required.Default, NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore)]
-        [System.Text.Json.Serialization.JsonConverter(typeof(System.Text.Json.Serialization.JsonStringEnumConverter))]
-        [Newtonsoft.Json.JsonConverter(typeof(Newtonsoft.Json.Converters.StringEnumConverter))]
-        public AvailableWhere? AvailableWhere { get; set; } = default!;
-
-        [System.Text.Json.Serialization.JsonPropertyName("applicationStatus")]
-        [Newtonsoft.Json.JsonProperty("applicationStatus", Required = Newtonsoft.Json.Required.DisallowNull, NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore)]
-        [System.Text.Json.Serialization.JsonConverter(typeof(System.Text.Json.Serialization.JsonStringEnumConverter))]
-        [Newtonsoft.Json.JsonConverter(typeof(Newtonsoft.Json.Converters.StringEnumConverter))]
-        public ApplicationReviewStatus ApplicationStatus { get; set; } = default!;
-
-        [System.Text.Json.Serialization.JsonPropertyName("apprenticeshipType")]
-        [Newtonsoft.Json.JsonProperty("apprenticeshipType", Required = Newtonsoft.Json.Required.DisallowNull, NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore)]
-        [System.Text.Json.Serialization.JsonConverter(typeof(System.Text.Json.Serialization.JsonStringEnumConverter))]
-        [Newtonsoft.Json.JsonConverter(typeof(Newtonsoft.Json.Converters.StringEnumConverter))]
-        public ApprenticeshipTypes ApprenticeshipType { get; set; } = default!;
-
-        [System.Text.Json.Serialization.JsonPropertyName("numberOfDaysApplicationAtThisStatus")]
-        [System.Text.Json.Serialization.JsonIgnore(Condition = System.Text.Json.Serialization.JsonIgnoreCondition.WhenWritingNull)]
-        [Newtonsoft.Json.JsonProperty("numberOfDaysApplicationAtThisStatus", Required = Newtonsoft.Json.Required.Default, NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore)]
-        public int? NumberOfDaysApplicationAtThisStatus { get; set; } = default!;
-
-    }
-
-    [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "14.2.0.0 (NJsonSchema v11.1.0.0 (Newtonsoft.Json v13.0.0.0))")]
     public partial class ApplicationReviewsResponse
     {
         [System.Text.Json.Serialization.JsonPropertyName("pageInfo")]
